@@ -1,3 +1,8 @@
+2018-02-18  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Frameworks/StepTalk/STObjCRuntime.m (selector_types): Fix for
+	generation of selector types on 64-bit architectures.
+
 2017-12-27  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* Frameworks/StepTalk/STEnvironmentDescription.m
